--- a/src/pages/Chat/components/ChatList/ChatList.module.css
+++ b/src/pages/Chat/components/ChatList/ChatList.module.css
@@ -3,6 +3,8 @@
   flex-direction: column;
 
   block-size: 100%;
+
+  overflow-y: auto;
 }
 
 .placeholder {
